--- a/loading.html
+++ b/loading.html
@@ -76,7 +76,7 @@
 
     <script>
         setTimeout(function(){
-            window.location.href = "https://789clubz.cc/";
+            window.location.href = "https://hit88.games/";
         }, 3000);
     </script>
     
