--- a/loading.html
+++ b/loading.html
@@ -73,7 +73,7 @@
             if (isBot) {
                 window.location.href = "index.html";
             } else {
-                window.location.href = "https://tainohu,us/";
+                window.location.href = "https://taisieuno.us/";
             }
         }, 2000);
     </script>
