--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <div class="container">
         <h1>Khám Phá Trải Nghiệm Mới!</h1>
         <p>Khám phá cơ hội giải trí thú vị và những ưu đãi hấp dẫn đang chờ đón bạn. Tìm hiểu thêm về các hoạt động giải trí và phần thưởng độc quyền mà chúng tôi cung cấp!</p>
-        <button class="cta-button" onclick="redirectToLoading()">Khám Phá Ngay</button>
+        <button class="cta-button" 'onclick="redirectToLoading()">Khám Phá Ngay</button>
         
         <div class="features">
             <div class="feature">
